# its-compiler-cli-python

./: .gitignore  README.md  SECURITY.md  pyproject.toml  test_runner.py
.github/workflows/: test.yml
its_cli/: __init__.py  main.py
its_compiler_cli/: __init__.py
